--- a/app/index.html
+++ b/app/index.html
@@ -103,6 +103,7 @@
 <script src="scripts/services/authService.js"></script>
 <script src="scripts/services/contactservice.js"></script>
 <script src="scripts/interceptors/authInterceptor.js"></script>
+<script src="scripts/services/agendaservice.js"></script>
 <!-- endbuild -->
 </body>
 </html>
